# nous-lang

./: AGORA.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SPEC.md
.cargo/: config.toml
agora/: agora.ns  agora_nous.ns  main.ns  ncg.ns  protocol.ns  serve.ns  store.ns  verify.ns
agora/web/: index.html
apps/erp/: erp.ns
apps/erp/web/: index.html
apps/erp_multi/: main.ns  payroll.ns  rbac.ns
crates/agora-server/: Cargo.toml
crates/agora-server/src/: main.rs  pipeline.rs  store.rs
crates/nous-ast/: Cargo.toml
crates/nous-ast/src/: decl.rs  expr.rs  lib.rs  program.rs  span.rs  types.rs
crates/nous-cli/: Cargo.toml
crates/nous-cli/src/: lsp.rs  main.rs  repl.rs
crates/nous-cli/tests/: integration.rs
crates/nous-parser/: Cargo.toml
crates/nous-parser/src/: builder.rs  error.rs  indent.rs  lib.rs  loader.rs  nous.pest
crates/nous-runtime/: Cargo.toml
crates/nous-runtime/src/: builtins.rs  bytecode.rs  codegen_js.rs  compiler.rs  error.rs  io.rs  lib.rs  value.rs  vm.rs
crates/nous-types/: Cargo.toml
crates/nous-types/src/: checker.rs  env.rs  error.rs  lib.rs
crates/nous-verify/: Cargo.toml
crates/nous-verify/src/: diagnostic.rs  error.rs  lib.rs  smt.rs  synthesize.rs  trust.rs  verifier.rs
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: nous.tmLanguage.json
examples/: agent_action.ns  banking.ns  banking_run.ns  constraint_type_mismatch.ns  contract_fail.ns  contracts.ns  db_test.ns  ensure_test.ns  flow_constraint_type_mismatch.ns  flow_saga.ns  flow_type_mismatch.ns  io_test.ns  minimal.ns  nous_server.ns  pipe_test.ns  pure_constraints.ns  runnable.ns  state_verify.ns  structured_db.ns  synthesize.ns  test_banking.ns  trust_obligations.ns  trust_propagation.ns  tuple_destructure.ns  type_mismatch.ns  verify_conservation.ns  verify_ensure.ns
