[workspace]
resolver = "2"
members = [
    "crates/nous-ast",
    "crates/nous-parser",
    "crates/nous-types",
    "crates/nous-verify",
    "crates/nous-runtime",
    "crates/nous-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Nous — a programming language where AI writes constraints, the compiler verifies them, and the runtime executes them."

[workspace.dependencies]
nous-ast = { path = "crates/nous-ast" }
nous-parser = { path = "crates/nous-parser" }
nous-types = { path = "crates/nous-types" }
nous-verify = { path = "crates/nous-verify" }
nous-runtime = { path = "crates/nous-runtime" }

pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
