[package]
name = "nous-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
nous-ast = { workspace = true }
nous-parser = { workspace = true }
nous-types = { workspace = true }
nous-verify = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
